[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/Menu.gd" type="Script" id=1]
[ext_resource path="res://ui/dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/MainScreen/button.png" type="Texture" id=6]
[ext_resource path="res://ui/MainScreen/pressedbutton.png" type="Texture" id=7]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -69.0
margin_right = 471.0
margin_bottom = 171.0
rect_scale = Vector2( 0.45, 0.45 )
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true
}

[node name="Title2" type="Label" parent="VBoxContainer"]
margin_right = 630.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Lobby"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 630.0
margin_bottom = 74.0
custom_constants/separation = 20

[node name="TextField" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 305.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
align = 1
placeholder_text = "Your name"

[node name="server_ip" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 325.0
margin_right = 630.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
align = 1
placeholder_text = "Enter IP Address"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 630.0
margin_bottom = 94.0
custom_constants/separation = 0

[node name="JoinButton" type="TouchScreenButton" parent="VBoxContainer/HBoxContainer2"]
position = Vector2( 400, 0 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )

[node name="JoinButton" type="Label" parent="VBoxContainer/HBoxContainer2/JoinButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Join"
align = 1
valign = 1

[node name="CreateButton" type="TouchScreenButton" parent="VBoxContainer/HBoxContainer2"]
position = Vector2( 200, 0 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )

[node name="CreateButton" type="Label" parent="VBoxContainer/HBoxContainer2/CreateButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Create"
align = 1
valign = 1

[node name="Device_ip" type="Label" parent="."]
margin_left = 100.0
margin_top = 160.0
margin_right = 200.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 3 )
align = 1

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/TextField" to="." method="_on_TextField_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/server_ip" to="." method="_on_server_ip_text_changed"]
[connection signal="released" from="VBoxContainer/HBoxContainer2/JoinButton" to="." method="_on_JoinButton_released"]
[connection signal="released" from="VBoxContainer/HBoxContainer2/CreateButton" to="." method="_on_CreateButton_released"]
